# c-parkour

./: CMakeLists.txt  README.md  cmake_install.cmake
include/: common.h  display.h  game.h  main.h
srcs/: CMakeLists.txt  display.c  game.c  main.c
